# 5ecuri7y

./: .env.example  .gitignore  .pre-commit-config.yaml  .rest  Makefile  README.md  docker-compose-app  docker-compose-app.yml  docker-compose.override.yml
.github/workflows/: ci.yml  deploy.yml
backend/: docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202403150001_create_search_results.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  product_vendor_url.py  search_result.py
backend/app/routers/: __init__.py  health.py  statistics.py  trigger.py
backend/app/schemas/: search.py  statistics.py
backend/app/services/: __init__.py  n8n_client.py  search_service.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: ResultsTable.tsx
frontend/src/components/dashboard/: VendorDashboard.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  separator.tsx
frontend/src/data/: vendor-assessment.ts
frontend/src/types/: vendor-assessment.ts
infra/: backend.Dockerfile  frontend.Dockerfile
infra/cloudrun/: README.md  backend.yaml  cloudbuild.yaml  frontend.yaml
infra/terraform/: main.tf  variables.tf
